------------------------------------------------------------------------ Firestore: - need to establish the UI code for allowing Users to add, update, delete 1. Trips 2. FishEvents
Maps:
- Need to display Fishing Events, Trips on Map as pins

- ADD TEXT VIEW CONTENT!!!

Verify:
- InstallRelease gradle task builds & deploys

--- a/AnyoneCanFish/app/src/main/res/layout-land/fragment_main.xml
+++ b/AnyoneCanFish/app/src/main/res/layout-land/fragment_main.xml
@@ -10,13 +10,14 @@
 
     <FrameLayout
         android:id="@+id/fl_weatherData"
-        android:layout_width="0dp"
-        android:layout_height="155dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:background="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/frameLayout"
+        >
 
         <include layout="@layout/fragment_weather_data" />
     </FrameLayout>
@@ -27,8 +28,8 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fl_weatherData">
+        app:layout_constraintStart_toEndOf="@+id/fl_weatherData"
+        app:layout_constraintTop_toTopOf="parent">
 
         <include layout="@layout/fragment_main_buttons" />
     </FrameLayout>
