--- a/AnyoneCanFish/app/src/main/res/layout-land/fragment_weather_data.xml
+++ b/AnyoneCanFish/app/src/main/res/layout-land/fragment_weather_data.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/paper_300"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
     tools:listitem="@layout/fragment_day" />
