--- a/AnyoneCanFish/app/src/main/res/layout/fragment_day.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/fragment_day.xml
@@ -1,172 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="2dp"
     app:cardCornerRadius="0dp"
     app:cardElevation="2dp"
-    >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/black_ish">
-        <TextView
-            android:id="@+id/tvPeriodName"
-            android:paddingStart="@dimen/list_side_margin"
-            android:paddingEnd="@dimen/list_side_margin"
-            android:layout_gravity="start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/paper_300"
-            tools:text="Today" />
+    tools:layout_height="155dp"
+    tools:layout_width="match_parent">
 
-        <TextView
-            android:id="@+id/tvShortForecast"
-            android:paddingStart="@dimen/list_side_margin"
-            android:paddingEnd="@dimen/list_side_margin"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/paper_500"
-            tools:text="Chance Freezing Rain then Chance Light Rain" />
-    </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgWeatherIcon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@string/forecast_weather_icon"
-            />
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/paper_300"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tvPeriodName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingStart="@dimen/list_side_margin"
+                android:paddingEnd="@dimen/list_side_margin"
+                tools:text="Today" />
+            <TextView
+                android:id="@+id/tvFracillum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:paddingStart="@dimen/list_side_margin"
+                android:paddingEnd="@dimen/list_side_margin"
+                tools:text="97%" />
+            <TextView
+                android:id="@+id/tvMoonPhase"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:paddingStart="@dimen/list_side_margin"
+                android:paddingEnd="@dimen/list_side_margin"
+                tools:text="Waning Gibbous" />
+        </FrameLayout>
+        <TextView
+            android:id="@+id/tvShortForecast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@color/paper_500"
+            android:paddingStart="@dimen/list_side_margin"
+            android:paddingEnd="@dimen/list_side_margin"
+            tools:text="Chance Freezing Rain then Chance Light Rain" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="4">
+            android:gravity="start"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/imgWeatherIcon"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:contentDescription="@string/forecast_weather_icon"
+                />
             <TextView
                 android:id="@+id/tvTemperature"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:padding="8dp"
                 android:fontFamily="@font/adamina"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:paddingStart="@dimen/text_margin_small"
+                android:paddingEnd="@dimen/text_margin_small"
                 android:textSize="32sp"
-                android:layout_weight="2"
-                tools:text="50 F" />
-
-            <TextView
-                android:id="@+id/tvWindSpeed"
+                tools:text="50.0 F" />
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_gravity="end"
                 android:gravity="center"
-                android:padding="8dp"
-                android:fontFamily="@font/adamina"
-                android:textSize="18sp"
-                android:layout_weight="1"
-                tools:text="4" />
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:id="@+id/tvWindSpeed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingStart="@dimen/text_margin"
+                    android:paddingEnd="@dimen/text_margin"
+                    android:textSize="18sp"
+                    tools:text="4 mph" />
+                <TextView
+                    android:id="@+id/tvWindDirection"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/adamina"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingStart="@dimen/text_margin"
+                    android:paddingEnd="@dimen/text_margin"
+                    android:textSize="18sp"
+                    tools:text="NW" />
+            </LinearLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end">
+                <ImageView
+                    android:id="@+id/imgGuessAtSuccess"
+                    android:layout_width="40dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="end"
+                    android:scaleType="fitEnd"
+                    android:contentDescription="@string/calculatron_info"
+                    tools:src="@drawable/outlook_good"/>
+            </FrameLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/sun_500"
+            android:orientation="horizontal"
+            android:weightSum="3">
 
             <TextView
-                android:id="@+id/tvWindDirection"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:id="@+id/tvSunRise"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="8dp"
-                android:fontFamily="@font/adamina"
-                android:textSize="18sp"
                 android:layout_weight="1"
-                tools:text="NW" />
+                android:background="@color/sun_300"
+                tools:text="7:31 AM" />
+
+            <TextView
+                android:id="@+id/tvSunZenith"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:background="@color/sun_700"
+                tools:text="12:25 PM" />
+
+            <TextView
+                android:id="@+id/tvSunSet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:background="@color/sun_300"
+                tools:text="5:18 PM" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/moon_500"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <TextView
+                android:id="@+id/tvMoonRise"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:background="@color/moon_300"
+                tools:text="6:55 PM" />
+
+            <TextView
+                android:id="@+id/tvMoonZenith"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:background="@color/moon_700"
+                tools:text="1:24 AM" />
+
+            <TextView
+                android:id="@+id/tvMoonSet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:background="@color/moon_300"
+                tools:text="8:49 AM" />
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/sun_500"
-        android:weightSum="3">
-        <TextView
-            android:id="@+id/tvSunRise"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/sun_300"
-            tools:text="7:31 AM" />
-
-        <TextView
-            android:id="@+id/tvSunZenith"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/sun_700"
-            tools:text="12:25 PM" />
-
-        <TextView
-            android:id="@+id/tvSunSet"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/sun_300"
-            tools:text="5:18 PM" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2">
-        <TextView
-            android:id="@+id/tvFracillum"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="97%" />
-        <TextView
-            android:id="@+id/tvMoonPhase"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Waning Gibbous" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/moon_500"
-        android:weightSum="3">
-        <TextView
-            android:id="@+id/tvMoonRise"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/moon_300"
-            tools:text="6:55 PM"
-            />
-        <TextView
-            android:id="@+id/tvMoonZenith"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/moon_700"
-            tools:text="1:24 AM"
-            />
-        <TextView
-            android:id="@+id/tvMoonSet"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/moon_300"
-            tools:text="8:49 AM"
-            />
-    </LinearLayout>
-</LinearLayout>
 </android.support.design.card.MaterialCardView>
