------------------------------------------------------------------------ Firestore: - need to establish the UI code for allowing Users to add, update, delete 1. Trips 2. FishEvents
Maps:
- Need to display Fishing Events, Trips on Map as pins

- ADD TEXT VIEW CONTENT!!!

Verify:
- InstallRelease gradle task builds & deploys

--- a/AnyoneCanFish/app/src/main/res/layout/fishing_widget_provider_layout.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/fishing_widget_provider_layout.xml
@@ -43,7 +43,7 @@
             android:layout_weight="3">
         </ListView>
         <ImageButton
-            android:id="@+id/LogFishEvent"
+            android:id="@+id/imgLogFishEvent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="top"
