Firestore: - need to show the 1. Trips 2. FishEvents
- add UI for allowing Users to add, update, delete

------------------------------------------------------------------------

Maps:
- would like to display Fishing Events, Trips on Map as pins

Verify:
- InstallRelease gradle task builds & deploys

--- a/AnyoneCanFish/app/src/main/res/layout/content_basic_equipment.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/content_basic_equipment.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".WhatYouNeed_Activity"
-    tools:showIn="@layout/activity_what_you_need">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
-
+    tools:context=".BasicEquipment_Activity"
+    tools:showIn="@layout/activity_basic_equipment">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvBasicEquipment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/rv_content_basic_equipment"
+        />
 </android.support.v4.widget.NestedScrollView>
