--- a/AnyoneCanFish/app/src/main/res/layout/activity_basic_equipment.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/activity_basic_equipment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".WhatYouNeed_Activity">
+    tools:context=".BasicEquipment_Activity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -33,7 +33,7 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_what_you_need_" />
+    <include layout="@layout/content_basic_equipment" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
