--- a/AnyoneCanFish/app/src/main/res/layout/content_lures.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/content_lures.xml
@@ -6,13 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".TackleBoxesActivity"
-    tools:showIn="@layout/activity_tackle_boxes">
+    tools:context=".LuresActivity"
+    tools:showIn="@layout/activity_lures">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvTackleBoxes"
+        android:id="@+id/rvLures"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        android:columnWidth="90dp"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:gravity="center"
+        app:layoutManager="android.support.v7.widget.GridLayoutManager"
         tools:listitem="@layout/rv_content_tackle_boxes"
         />
 
