Firestore: - need to show the 1. Trips 2. FishEvents
- add UI for allowing Users to add, update, delete

------------------------------------------------------------------------

Maps:
- would like to display Fishing Events, Trips on Map as pins

Verify:
- InstallRelease gradle task builds & deploys

--- a/AnyoneCanFish/app/src/main/res/layout/activity_lures.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/activity_lures.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".TackleBoxesActivity">
+    tools:context=".LuresActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -29,6 +29,13 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_tackle_boxes" />
+    <include layout="@layout/content_lures" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/lures_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/plus_sign" />
 </android.support.design.widget.CoordinatorLayout>
