Firestore: - need to show the 1. Trips 2. FishEvents
- add UI for allowing Users to add, update, delete

------------------------------------------------------------------------

Maps:
- would like to display Fishing Events, Trips on Map as pins

Verify:
- InstallRelease gradle task builds & deploys

--- a/AnyoneCanFish/app/src/main/res/layout/content_fishing_trips.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/content_fishing_trips.xml
@@ -8,4 +8,6 @@
     tools:context=".FishingTripsActivity"
     tools:showIn="@layout/activity_fishing_trips">
 
+    <include layout="@layout/fragment_fishing_trips"/>
+
 </android.support.constraint.ConstraintLayout>
