--- a/AnyoneCanFish/app/src/main/res/layout/content_fish_events.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/content_fish_events.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".LuresActivity"
-    tools:showIn="@layout/activity_lures">
-    <include layout="@layout/fragment_lures" />
+    tools:context=".FishEventsActivity"
+    tools:showIn="@layout/activity_fish_events">
+    <include layout="@layout/fragment_fish_events" />
 </android.support.v4.widget.NestedScrollView>
