--- a/AnyoneCanFish/app/src/main/res/layout/activity_main.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/activity_main.xml
@@ -45,14 +45,12 @@
 
     <include layout="@layout/fragment_main" />
 
-<!--
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/main_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|center|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/plus_sign" />
--->
 
 </android.support.design.widget.CoordinatorLayout>
