--- a/AnyoneCanFish/app/src/main/res/layout/fragment_lures.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/fragment_lures.xml
@@ -41,7 +41,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/etDescription"
+                android:id="@+id/etDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -49,7 +49,7 @@
                 android:inputType="text" />
 
             <EditText
-                android:id="@+id/etSize-"
+                android:id="@+id/etSize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
