--- a/AnyoneCanFish/app/src/main/res/layout/activity_fish_events.xml
+++ b/AnyoneCanFish/app/src/main/res/layout/activity_fish_events.xml
@@ -32,7 +32,7 @@
     <include layout="@layout/content_fish_events" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/FishEvents_fab"
+        android:id="@+id/fishevents_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
